# telegram-bot-ai

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yaml  main.go  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5150c77626c5_.py  86ba403bab55_initial_tables_users_transactions.py  b74580f1681a_initial_tables_users_transactions.py
migrations/: env.py
migrations/versions/: 1ebc7e296472_.py  7278d48e4bee_.py  79017bf9c2c1_.py  8c828b040405_.py  e713fe441d81_.py  f8080fe34a10_.py
src/: config.py  database.py
src/core/: config.py
src/core/repository/: __init__.py  refer_link.py  transaction.py
src/core/service/: user.py
src/database/: __init__.py  session.py
src/database/models/: __init__.py  base.py  generated.py  refer_link.py  transaction.py  user.py
src/database/repository/: __init__.py  refer_link.py  transaction.py  user.py
src/models/: __init__.py  admin.py  generated.py  refer_link.py  transaction.py  user.py
src/pkg/: kassa.py  kie_ai_client.py  logger.py
src/repository/: user.py
src/tg_bot/: bot.py
src/tg_bot/buttons/: __init__.py  call_back_data.py  user.py
src/tg_bot/common/: __init__.py  common.py  reply_messages.py
src/tg_bot/common/function/: edit_message.py
src/tg_bot/common/keyboard/: payment.py  user.py
src/tg_bot/common/messages/: user.py
src/tg_bot/hanlder/: __init__.py  balance.py  cmd_start.py  errors.py  generate.py  user.py
src/tg_bot/hanlder/user/: balance.py  generate.py  user.py
src/tg_bot/middleware/: __init__.py  repository.py
